<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Localize</string>
    <string name="loading">Tracme is Loading..</string>
    <string name="hello_world"> Hello World </string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select Your Location:</string>
    <string name="go_prompt">GO!</string>
    <string name="floor_prompt">What Floor Are You On?</string>
	<string name="building_prompt">Select The Building</string>
	<string name="toggle_button">ToggleButton</string>
	<string name="mapping_mode">Mapping mode</string>
	<string name="speed">Speed</string>
	
</resources>
