<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/betvalue"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:padding="10dp" >

<TextView
    android:id="@+id/tvBetVal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:text="@string/speed"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<SeekBar
    android:id="@+id/sbBetVal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tvBetVal"
    android:layout_centerHorizontal="true" />

<ToggleButton
    android:id="@+id/toggleButton1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/sbBetVal"
    android:layout_below="@+id/sbBetVal"
    android:layout_marginRight="14dp"
    android:text="@string/toggle_button"
    android:textOff="FOLLOW"
    android:textOn="POINT" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/toggleButton1"
    android:layout_alignBottom="@+id/toggleButton1"
    android:layout_alignRight="@+id/tvBetVal"
    android:text="@string/mapping_mode"
    android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>